<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>byrd.riley</groupId>
	<artifactId>Notification-Service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Notification-Service</name>
	<description>Notification microservice project by Byrd.</description>

	<properties>
		<java.version>11</java.version>
		<twilio.version>8.14.0</twilio.version>
		<qpid-broker.version>8.0.4</qpid-broker.version>
	</properties>

	<dependencies>
		<!-- Queuing -->
		<dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>

		<!-- S.M.S. -->
		<dependency>
	  		<groupId>com.twilio.sdk</groupId>
	  		<artifactId>twilio</artifactId>
	  		<version>${twilio.version}</version>
		</dependency>
		
		<!-- Mail -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
				
		<!-- Test Environment -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.amqp</groupId>
			<artifactId>spring-rabbit-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.qpid</groupId>
		    <artifactId>qpid-broker-core</artifactId>
		    <version>${qpid-broker.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.qpid</groupId>
		    <artifactId>qpid-broker-plugins-memory-store</artifactId>
		    <version>${qpid-broker.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.qpid</groupId>
		    <artifactId>qpid-broker-plugins-amqp-0-8-protocol</artifactId>
		    <version>${qpid-broker.version}</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>
	
	
	<build>
		<finalName>Notification-Service</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
